Fixed table alignments for course participants page.

--- a/static/scss/admin/index.scss
+++ b/static/scss/admin/index.scss
@@ -176,6 +176,9 @@
         margin-left: 1em;
         margin-right: 1em;
       }
+      .course-progress-link {
+        text-align: right;
+      }
     }
   }
 
